Refactor Send to W2G extension to utilize W2G API for video management. Updated manifest to include API permissions, modified popup for API key input, and streamlined background script for handling video submissions. Removed legacy content script for W2G tab communication. Enhanced content script to support multiple title selectors for YouTube videos.

--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,11 @@
   "description": "Quickly send YouTube videos to your Watch2Gether room",
   "permissions": [
     "storage",
-    "activeTab",
-    "tabs",
-    "notifications",
-    "contextMenus"
+    "tabs"
   ],
   "host_permissions": [
-    "https://w2g.tv/*"
+    "https://w2g.tv/*",
+    "https://api.w2g.tv/*"
   ],
   "background": {
     "service_worker": "js/background.js"
@@ -21,11 +19,6 @@
       "matches": ["*://*.youtube.com/*"],
       "js": ["js/content.js"],
       "css": ["css/style.css"],
-      "run_at": "document_idle"
-    },
-    {
-      "matches": ["*://w2g.tv/*"],
-      "js": ["js/w2g-content.js"],
       "run_at": "document_idle"
     }
   ],
