--- a/manifest.json
+++ b/manifest.json
@@ -36,5 +36,11 @@
     "32": "icons/icon-32.png",
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/w2g.svg"],
+      "matches": ["*://*.youtube.com/*"]
+    }
+  ]
 }
