Update icon reference in manifest and content script to use new W2Y SVG. Modify CSS styles for button backgrounds and hover effects to improve visual consistency and user experience.

--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/w2g.svg"],
+      "resources": ["icons/w2y.svg"],
       "matches": ["*://*.youtube.com/*"]
     }
   ]
