Update copyright information in LICENSE, change icon reference in manifest from 'w2y.svg' to 'y2w.svg', and revise README for branding and feature descriptions. Remove unused 'w2y.svg' file and update content script to reflect new icon usage.

--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/w2y.svg"],
+      "resources": ["icons/y2w.svg"],
       "matches": ["*://*.youtube.com/*"]
     }
   ]
