--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "Send to W2G",
+  "name": "Y2W - YouTube to Watch2Gether",
   "version": "1.0.0",
+  "version_name": "1.0.0",
   "description": "Quickly send YouTube videos to your Watch2Gether room",
+  "author": "Federico González",
+  "short_name": "Y2W",
+  "homepage_url": "https://github.com/fedevgonzalez/youtube-to-w2g",
+  "offline_enabled": false,
   "permissions": [
     "storage",
     "tabs"
